--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
